tweak update instructions.

--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@ $ git push</pre>
 
                   <h3>Expanding on sample app</h3>
                   <p>
-                  In order to access the example application, you have to remove the
+                  In order to access the example blog application, you have to remove the
                   public/index.html file which serves as the welcome page. Other option is to make a
                   request directly to `/articles` which will give you access to the blog example.
                   </p>
