--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,14 @@ states.</p>
 <h4>Risk</h4>
 
 <p>Pregnancy, Possible blood transfusion risk. </p>
-
+</article>
+<article>
+<nav>
+<h1>Contribute</h1>
+<ul>
+<li><a href="http://rails-postgresql-example-epidemapp.0ec9.hackathon.openshiftapps.com/articles">Contribute blog article</a></li>
+</ul>
+</nav>
 <p></p>
 </article>
 <article>
@@ -148,3 +155,4 @@ href="http://drupal-nariekalo.rhcloud.com/">here</a></p>
 <p></p>
 </body>
 </html>
+
