Rename github org to sclorg
Addresses openshift/origin#19998

--- a/public/index.html
+++ b/public/index.html
@@ -222,7 +222,7 @@ pre {
 
               <h2>Deploying code changes</h2>
                 <p>
-                  The source code for this application is available to be forked from the <a href="https://www.github.com/openshift/rails-ex">OpenShift GitHub repository</a>.
+                  The source code for this application is available to be forked from the <a href="https://www.github.com/sclorg/rails-ex">OpenShift GitHub repository</a>.
                   You can configure a webhook in your repository to make OpenShift automatically start a build whenever you push your code:
                 </p>
 
